<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="50dp"
    android:paddingRight="50dp"
    android:gravity="center"
    >
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/registration_list_btn"
        android:id="@+id/resgistrationList_btn"
        />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/notification_btn"
        android:id="@+id/notification_btn"
        />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_question_btn"
        android:id="@+id/question_btn"
        />
    <!--<Button-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:text="@string/add_answer_btn"-->
        <!--android:id="@+id/answer_btn"-->
        <!--/>-->

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/exam_start_btn"
        android:id="@+id/examStart_btn"
        />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/result_publish_btn"
        android:id="@+id/resultPublisBt"
        />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/logout_btn"
        android:id="@+id/logout_btn"
        />
</LinearLayout>
