<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.rasel.bitm.bitmproject.Registration"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight=".5"
        android:orientation="vertical">

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="5dp"
            android:gravity="center"
            android:text="@string/reg_text"
            android:textColor="@android:color/holo_purple"
            android:textSize="23sp"
            />
        <EditText
            android:id="@+id/userNameEt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/reg_name"
            android:layout_marginTop="10dp"
            android:singleLine="true"
            />

        <EditText
            android:id="@+id/userEmailEt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/reg_email"
            android:singleLine="true"
            />

        <EditText
            android:id="@+id/userPasswordEt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/reg_password"
            android:inputType="textPassword"
            android:singleLine="true"
            />

        <EditText
            android:id="@+id/userConPasswordET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/reg_conPass"
            android:inputType="textPassword"
            android:singleLine="true"
            />
        <Button
            android:id="@+id/loginButton"
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:textSize="18sp"
            android:layout_gravity="center"
            android:text="@string/reg_submit"
            android:onClick="CreatAccount"
            android:layout_marginTop="10dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight=".5"
        android:orientation="vertical">

    </LinearLayout>
</LinearLayout>
